<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResistanceDemoFragment">

    <TextView
        android:id="@+id/txt_o1_title"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/el_resistance_o1_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_o1_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_o1_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_o2_title"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/el_resistance_o2_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_o1_title" />

    <TextView
        android:id="@+id/txt_o2_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_o2_title"
        app:layout_constraintTop_toBottomOf="@id/txt_o1_title" />

    <TextView
        android:id="@+id/txt_t3_title"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/el_resistance_t3_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_o2_title" />

    <TextView
        android:id="@+id/txt_t3_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_t3_title"
        app:layout_constraintTop_toBottomOf="@id/txt_o2_title" />

    <TextView
        android:id="@+id/txt_t4_title"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/el_resistance_t4_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_t3_title" />

    <TextView
        android:id="@+id/txt_t4_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_t4_title"
        app:layout_constraintTop_toBottomOf="@id/txt_t3_title" />
</androidx.constraintlayout.widget.ConstraintLayout>