<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EegIndexDemoFragment">

    <TextView
        android:id="@+id/txt_alpha_index_title"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/alpha_index_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_alpha_index_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_alpha_index_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_beta_index_title"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/beta_index_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_alpha_index_title" />

    <TextView
        android:id="@+id/txt_beta_index_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_beta_index_title"
        app:layout_constraintTop_toBottomOf="@id/txt_alpha_index_title" />

    <TextView
        android:id="@+id/txt_delta_index_title"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/delta_index_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_beta_index_title" />

    <TextView
        android:id="@+id/txt_delta_index_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_delta_index_title"
        app:layout_constraintTop_toBottomOf="@id/txt_beta_index_title" />

    <TextView
        android:id="@+id/txt_theta_index_title"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/theta_index_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_delta_index_title" />

    <TextView
        android:id="@+id/txt_theta_index_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_theta_index_title"
        app:layout_constraintTop_toBottomOf="@id/txt_delta_index_title" />

</androidx.constraintlayout.widget.ConstraintLayout>